--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Inventions -- History'
 - !lcc 'T'
+- GITenberg
 tableOfContents: 'Invention in primeval times -- Invention in the Orient -- Invention
   in Greece -- Invention in Rome: its rise and fall -- Invention of the gun and of
   printing -- Columbus, Copernicus, Galileo and others -- The rise of electricity,
